# cw-ip-211_keyboardninja

./: .gitignore  CMakeLists.txt  README.md  easy.txt  hard.txt  keyboard.c  medium.txt
.github/workflows/: build.yml
docs/: tech.md
include/: game.h  lexer.h  menu.h  record.h
res/: lvl_custom.txt
res/levels/: lvl_easy.txt  lvl_hard.txt  lvl_medium.txt
res/test/: test1.txt  test_leaders.txt
source/: game.c  lexer.c  main.c  menu.c  record.c
test/: main.c  test.c
